metadata-osd-0.6.1 / 2023-11-01
===============================
 * fix: Chapter title (offset) for audio files with
        internal chapters

metadata-osd-0.6.0 / 2023-07-02
===============================
 * Added: Pathname fallback on/off switch options:
     enable_pathname_fallback_*

metadata-osd-0.5.4 / 2023-03-23
===============================
 * Don't use 'goto' statement to support Lua 5.1

metadata-osd-0.5.3 / 2023-03-09
===============================
 * fix: Parse paths with backslashes for pathname fallback

metadata-osd-0.5.2 / 2023-03-07
===============================
 * fix: Reset OSD data before loading new file

metadata-osd-0.5.1 / 2023-02-26
===============================
 * fix: Apply textarea_2 styling options also to textarea_2_reldate
 * fix: Remove extraneous quot marks from example configuration file

metadata-osd-0.5.0 / 2023-02-10
===============================
 * BREAKING CHANGES:
     - user config files named 'metadata-osd.conf' must be
       renamed to 'metadata_osd.conf' (version 0.1.0 heritage)
     - config option 'show_current_chapter_number' must be
       renamed to 'show_chapternumber'
     - config option 'show_current_albumtrack_number' or
       'show_albumtrack_number' must be renamed to
       'show_albumtracknumber'
 * New user config options
     - show_chapternumber
     - show_albumtracknumber
 * Exposed key binding names for input.conf
 * Disabled by default while viewing pictures
 * Matched autohide delays of 'metadata-osd' and 'status osd'
 * Removing newline characters in OSD messages
 * Not showing album's track number by default
 * New styling config options
 * OSD message truncate on UTF-8 characters (not bytes)

metadata-osd-0.4.1 / 2022-10-02
===============================
 * fix: Add missing check in year metadata pattern extraction

metadata-osd-0.4.0 / 2022-09-24
===============================
 * Tune metadata processing:
     - Cut out and show just the year (not the full date, if present)