@@ -1,3 +1,7 @@
+metadata-osd-0.6.2 / 2023-12-25
+===============================
+ * fix: Occassional crashes on file path evaluation
+
 metadata-osd-0.6.1 / 2023-11-01
 ===============================
  * fix: Chapter title (offset) for audio files with
